# questfoundry

./: .cz.toml  .env.example  .gitignore  .markdownlint.json  .markdownlintignore  .pre-commit-config.yaml  AGENTS.md  ARCHITECTURE.md  ARCHITECTURE_VIOLATION.md  CLAUDE.md  CODEX.md  CONTRIBUTING.md  GEMINI.md  HYDRATION_REPORT.md  MIGRATION.md  MIGRATION_V1_TO_V2.md  MIGRATION_V1_TO_V2_USER_GUIDE.md  ORPHANED_PRIMITIVES.md  ORPHAN_REMEDIATION_PLAN.md  PHASE1_COMPLETION.md  PHASE_3_COMPLETION_REPORT.md  PHASE_3_SUMMARY.md  PYPI_SETUP.md  QF_CLI_IMPLEMENTATION_PLAN.md  README.md  ROADMAP.md  RUNTIME-CLEANROOM-BRIEF.md  SCHEMA_HYDRATION.md  agents.md  codecov.yml  fix_final_errors.py  fix_loop_edges.py  fix_loop_errors.py  fix_missing_sections.py  fix_validation_errors.py  hydrate_schemas.py  hydrate_schemas_v5.py  mkdocs.yml  pyproject.toml  test_ollama.bat  (+3 more)
.claude/: settings.json  settings.local.json  spec-query-template.md
.claude/agent-instructions/: stacked-prs.md
.claude/agents/: architect-reviewer.md  cli-developer.md  code-reviewer.md  domain-reader.md  llm-architect.md  prompt-engineer.md  python-pro.md  qa-expert.md  questfoundry-default.md  spec-layer-sync-maintainer.md  spec-reader.md
.claude/commands/: spec.md
.claude/hooks/: block-generated-edits.sh  remind-domain-first.sh
.claude/memory/: current-task.md  invariants.md  test-protocol.md
.claude/plans/: domain-v4-implementation.md
.claude/rules/: cold-store.md  domain-first.md  generated-code.md  testing.md
.gemini/: config.yaml  styleguide.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  claude-code-review.yml  docs.yml  lint-test.yml  pages.yml  publish-compiler.yml  publish-python.yml  publish-webui.yml  release-spec.yml  webui-ci.yml
_archive/: MIGRATION.md  PHASE_3_SUMMARY.md  PLAN-v4-domain-architecture.md  test_schema_tools.py
_archive/docs-current-v3/: conf.py  index.md  phase5-discussion.md  quickstart.md
_archive/runtime-v3/: config.py  quality_gates.py  tracing.py  (+2 more)
cli/python/: README.md  pyproject.toml
cli/python/src/questfoundry_cli/: __init__.py  config.py  config_commands.py  main.py  run_commands.py
docs/: architecture.md  grow-implementation-plan.md  index.md  phase5-implementation-plan.md
domain-v4/: studio.json
example_1/: checkpoints.db
example_project3_ollama/: checkpoints.db  project.qfdb
example_project3_openai/: checkpoints.db  project.qfdb
example_project_ollama/: checkpoints.db
examples/: hybrid-providers-project.yaml
lib/runtime/: AGENTS.md  CLAUDE.md  CONTRIBUTING.md  README.md  TESTING.md  pyproject.toml
lib/runtime/docs/: CONFIGURATION.md
lib/runtime/scripts/: bundle_resources.py
lib/runtime/src/questfoundry/runtime/: __init__.py  build_hooks.py  config.py  logging_config.py  spec_loader.py  structured_logging.py
lib/runtime/src/questfoundry/runtime/cli/: config_cmd.py  doctor.py  main.py  parser.py  showrunner.py
lib/runtime/src/questfoundry/runtime/config/: model_tiers.yaml
lib/runtime/src/questfoundry/runtime/core/: README.md  __init__.py  aligned_cold_store.py  bind_tools_executor.py  capability_mapper.py  cold_store.py  control_plane.py  edge_evaluator.py  graph_factory.py  node_factory.py  protocol_executor.py  provider_manager.py  react_executor.py  runtime_context_assembler.py  schema_registry.py  schema_tool_generator.py  spec_fetcher.py  state_manager.py  trace_handler.py
lib/runtime/src/questfoundry/runtime/models/: loop.py  role.py  state.py
lib/runtime/src/questfoundry/runtime/plugins/llm/: anthropic.py  openai.py
lib/runtime/src/questfoundry/runtime/plugins/tools/: registry.py
lib/runtime/src/questfoundry/runtime/protocol/: __init__.py  protocol.py  types.py
lib/runtime/src/questfoundry/runtime/templates/: art_director.j2  audio_director.j2  audio_producer.j2  book_binder.j2  codex_curator.j2  export_service.j2  gatekeeper.j2  illustrator.j2  lore_weaver.j2  player_narrator.j2  plotwright.j2  researcher.j2  scene_smith.j2  showrunner.j2  style_lead.j2  translator.j2
lib/runtime/src/questfoundry/runtime/tools/: __init__.py  creative_tools.py  export_tools.py  knowledge_tools.py  media_tools.py  orchestration_tools.py  protocol_tools.py  research_tools.py  state_tools.py  validation_tools.py
lib/runtime/tests/: test_aligned_cold_store.py  test_bind_tools_executor_logging.py  test_capability_mapper.py  test_control_plane.py  test_core_integration.py  test_graph_factory_hook_harvest.py  test_manual_llm.py  test_protocol_tools.py  test_runtime_context_assembler.py  test_state_tools.py  test_validation_tools.py
meta/: README.md
schemas/: dream.schema.json
scripts/: check_schema_model_sync.py  generate_models.py  validate_schemas.py
spec/: .cz.toml  AGENTS.md  CHANGELOG.md  LAYER5_REBUILD_PLAN.md  README.md  SPEC_VERSION.txt  agents.md
test12/: project.qfdb
tests/: __init__.py  conftest.py  test_generators.py  test_parser.py
webui/: CHECKLIST.md  IMPLEMENTATION_GUIDE.md  PR_DESCRIPTION.md  PWA_IMPLEMENTATION_GUIDE.md  README.md  SESSION_1_SUMMARY.md  SESSION_2_SUMMARY.md  SESSION_3_SUMMARY.md  SESSION_4_SUMMARY.md  SESSION_5_SUMMARY.md  SESSION_6_SUMMARY.md  SESSION_7_SUMMARY.md  SESSION_8_SUMMARY.md  SESSION_9_SUMMARY.md  SESSION_SUMMARY.md  docker-compose.yml
webui/api/: Dockerfile  README.md  pyproject.toml  schema.sql  validate_deployment.sh
webui/api/src/webui_api/: __init__.py  config.py  dependencies.py  lifecycle.py  locking.py  main.py  user_settings.py
webui/api/src/webui_api/middleware/: __init__.py  auth.py
webui/api/src/webui_api/routers/: __init__.py  artifacts.py  execution.py  projects.py  user_settings.py
webui/api/src/webui_api/storage/: __init__.py  postgres_store.py  valkey_store.py
webui/api/tests/: __init__.py  conftest.py  test_artifact_endpoints.py  test_auth_middleware.py  test_database_schema.py  test_docker_builds.py  test_execution_endpoints.py  test_locking.py  test_postgres_store.py  test_project_endpoints.py  test_user_settings.py  test_user_settings_endpoints.py  test_valkey_store.py
(+1708 files in other folders)
