[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "questfoundry"
version = "3.0.0-alpha.1"
description = "AI-powered interactive fiction studio - compile MyST domain specs into executable LangGraph workflows"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "QuestFoundry Contributors" }
]
keywords = ["langgraph", "interactive-fiction", "ai", "myst", "workflow"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    # LangGraph + LangChain core
    "langgraph>=0.2",
    "langchain-core>=0.3",
    "langchain-ollama>=0.2",
    "langchain-openai>=0.2",
    "langchain-google-genai>=2.1",
    # Data validation
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    # MyST parsing
    "pyyaml>=6.0",
    # CLI
    "typer>=0.12",
    "rich>=13.0",
    # Utilities
    "structlog>=24.0",
    "python-dotenv>=1.0",
    # HTTP client (for SearXNG tool)
    "httpx>=0.27",
    # Template rendering
    "jinja2>=3.0",
    "langsmith>=0.4.56",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
    "mypy>=1.13",
    "types-PyYAML>=6.0",
]
docs = [
    "sphinx>=7.0",
    "myst-parser>=3.0",
    "sphinx-rtd-theme>=2.0",
    "sphinx-autodoc-typehints>=2.0",
]
rag = [
    # Vector search for corpus knowledge
    "sentence-transformers>=3.0",
    "sqlite-vec>=0.1",
]

[project.scripts]
qf = "questfoundry.cli:app"

[project.urls]
Repository = "https://github.com/questfoundry/questfoundry"

[tool.hatch.build.targets.wheel]
packages = ["src/questfoundry"]

[tool.hatch.envs.default]
dependencies = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
    "mypy>=1.13",
]

[tool.hatch.envs.default.scripts]
test = "pytest tests/ -v"
test-cov = "pytest tests/ --cov=questfoundry --cov-report=term-missing"
lint = "ruff check src/ tests/"
format = "ruff format src/ tests/"
typecheck = "mypy src/"
compile = "python -m questfoundry.compiler"

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = ["src/questfoundry/generated"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # function call in default argument (required for typer)
]

[tool.ruff.lint.isort]
known-first-party = ["questfoundry"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = [
    "langchain_core.*",
    "langchain_ollama.*",
    "langchain_openai.*",
    "langchain_google_genai.*",
    "langgraph.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "questfoundry.generated.*"
ignore_errors = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-v --tb=short"
