[project]
name = "questfoundry"
version = "0.1.0"
description = "Pipeline-driven interactive fiction generation"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [
    { name = "Peter van Liesdonk", email = "peter@liesdonk.nl" }
]
keywords = ["interactive-fiction", "storytelling", "llm", "narrative"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Games/Entertainment",
    "Topic :: Text Processing :: Markup",
    "Typing :: Typed",
]

dependencies = [
    "ruamel.yaml>=0.18",
    "jsonschema>=4.0",
    "pydantic>=2.0",
    "typer>=0.12",
    "rich>=13.0",
    "tiktoken>=0.5",
    "python-dotenv>=1.0",
    "structlog>=24.0",
    "httpx>=0.27",
    "prompt_toolkit>=3.0",
    # LangChain core
    "langchain>=0.3",
    "langchain-core>=0.3",
    "langgraph>=0.2",
    "ifcraftcorpus[embeddings-api]>=1.4.0",
    "jinja2>=3.1.6",
    "pillow>=12.1.0",
    "rapidfuzz>=3.0",
]

[project.optional-dependencies]
ollama = [
    "langchain-ollama>=0.3",
]
openai = [
    "langchain-openai>=0.3",
]
anthropic = [
    "langchain-anthropic>=0.3",
]
google = [
    "langchain-google-genai>=2.0",
]
all-providers = [
    "langchain-ollama>=0.3",
    "langchain-openai>=0.3",
    "langchain-anthropic>=0.3",
    "langchain-google-genai>=2.0",
]
tracing = [
    "langsmith>=0.2",
]
research = [
    "ifcraftcorpus[embeddings-api]",
    "pvl-webtools @ git+https://github.com/pvliesdonk/pvl-webtools.git",
]
research-corpus = [
    "ifcraftcorpus[embeddings-api]",
]
research-web = [
    "pvl-webtools @ git+https://github.com/pvliesdonk/pvl-webtools.git",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "mypy>=1.11",
    "ruff>=0.6",
    "pre-commit>=3.8",
    "types-jsonschema>=4.0",
]
viz = [
    "networkx>=3.0",
    "graphviz>=0.20",
]
pdf = [
    "weasyprint>=62.0",
]

[project.scripts]
qf = "questfoundry.cli:app"

[project.urls]
Homepage = "https://github.com/pvliesdonk/questfoundry"
Repository = "https://github.com/pvliesdonk/questfoundry"
Documentation = "https://github.com/pvliesdonk/questfoundry/tree/main/docs"
Issues = "https://github.com/pvliesdonk/questfoundry/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/questfoundry"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
addopts = [
    "--strict-markers",
    "-ra",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "e2e: marks tests as end-to-end tests",
]

[tool.coverage.run]
source = ["src/questfoundry"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
fail_under = 70

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = [
    "ruamel.*",
    "tiktoken.*",
    "langchain_core.*",
    "langchain_ollama.*",
    "langchain_openai.*",
    "langchain_anthropic.*",
    "langchain_google_genai.*",
    "ifcraftcorpus.*",
    "pvlwebtools.*",
    "weasyprint",
    "weasyprint.*",
]
ignore_missing_imports = true

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "PTH",    # flake8-use-pathlib
    "RUF",    # ruff-specific rules
]
ignore = [
    "E501",   # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["questfoundry"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "types-pyyaml>=6.0.12.20250915",
]
