[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "questfoundry-runtime"
version = "0.1.0"
description = "QuestFoundry runtime engine - transforms YAML role and loop definitions into executable LangGraph StateGraphs"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "QuestFoundry Contributors" }
]
dependencies = [
    "langgraph>=0.1.0",
    "langchain-core>=0.1.0",
    "langchain-anthropic>=0.1.0",
    "langchain-openai>=0.1.0",
    "langchain-ollama>=0.1.0",
    "langchain-community>=0.1.0",
    "pydantic>=2.0",
    "typer>=0.12",
    "rich>=13.0",
    "jinja2>=3.1",
    "pyyaml>=6.0",
    "jsonschema>=4.20",
    "asteval>=0.9",
    "json-logic-qubit>=0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1",
    "mypy>=1.0",
]

[project.scripts]
qf = "questfoundry.runtime.cli.main:app"

[tool.hatch.build.targets.wheel]
packages = ["src/questfoundry"]

# Include bundled spec resources in the package
[tool.hatch.build.targets.wheel.force-include]
"src/questfoundry/runtime/resources" = "questfoundry/runtime/resources"

[tool.hatch.build.hooks.custom]
path = "src/questfoundry/runtime/build_hooks.py"

[tool.hatch.envs.default]
dependencies = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1",
    "mypy>=1.0",
]

[tool.hatch.envs.default.scripts]
# Bundle spec resources from monorepo into src/questfoundry/runtime/resources/
bundle = "python scripts/bundle_resources.py"
# Run tests
test = "pytest tests/ -v"
test-cov = "pytest tests/ --cov=questfoundry.runtime --cov-report=term-missing"
# Linting and formatting
lint = "ruff check src/ tests/"
format = "ruff format src/ tests/"
typecheck = "mypy src/"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
